<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.yandex.qatools.htmlelements</groupId>
    <artifactId>htmlelements</artifactId>
    <version>1.20.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Yandex QATools HtmlElements</name>
    <description>WebDriver PageObject extension</description>
    <url>https://github.com/yandex-qatools/htmlelements/</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>14</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <organization>
        <name>Yandex</name>
        <url>http://company.yandex.com</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>git@github.com:yandex-qatools/htmlelements.git</url>
        <connection>scm:git:git@github.com:yandex-qatools/htmlelements.git</connection>
        <developerConnection>scm:git:git@github.com:yandex-qatools/htmlelements.git</developerConnection>
      <tag>HEAD</tag>
  </scm>

    <issueManagement>
        <system>GitHub Issue Tracker</system>
        <url>https://github.com/yandex-qatools/htmlelements/issues</url>
    </issueManagement>

    <modules>
        <module>htmlelements-java</module>
        <module>htmlelements-matchers</module>
        <module>htmlelements-thucydides</module>
        <module>htmlelements-all</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <source>${java.version}</source>
                            <doclint>none</doclint>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <developers>
        <developer>
            <id>AlexanderTolmachev</id>
            <name>Alexander Tolmachev</name>
        </developer>
        <developer>
            <id>eroshenkoam</id>
            <name>Artem Eroshenko</name>
        </developer>
        <developer>
            <id>artkoshelev</id>
            <name>Artem Koshelev</name>
        </developer>
        <developer>
            <id>leonsabr</id>
            <name>Leonid Rudenko</name>
        </developer>
        <developer>
            <id>lanwen</id>
            <name>Kirill Merkushev</name>
        </developer>
    </developers>

</project>
